--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~52.0.25",
     "expo-constants": "~17.0.5",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
