--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~52.0.25",
     "expo-constants": "~17.0.5",
+    "expo-file-system": "~18.0.11",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
