--- a/app.json
+++ b/app.json
@@ -27,7 +27,12 @@
       "bundler": "metro"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+     [ "expo-font",
+        {
+          "fonts": ["node_modules/@expo-google-fonts/caveat/Caveat_400Regular.ttf"]
+        }]
+
     ]
   }
 }
