Add a quick action

--- a/app.json
+++ b/app.json
@@ -28,11 +28,23 @@
     },
     "plugins": [
       "expo-router",
-     [ "expo-font",
+      [
+        "expo-font",
         {
-          "fonts": ["node_modules/@expo-google-fonts/caveat/Caveat_400Regular.ttf"]
-        }]
-
+          "fonts": [
+            "node_modules/@expo-google-fonts/caveat/Caveat_400Regular.ttf"
+          ]
+        }
+      ],
+    [  "expo-quick-actions",
+  {
+    "androidIcons":{
+      "leaf":{
+        "foregroundImage": "./assets/leaf.png",
+        "backgroundColor": "#ffffff"
+      }
+    }
+  }]
     ]
   }
 }
