--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-quick-actions": "^4.0.2",
     "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
